--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "~51.0.8",
     "expo-dev-client": "~4.0.14",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
