--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-dev-client": "~4.0.14",
     "expo-status-bar": "~1.12.1",
@@ -18,9 +21,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.1",
+    "react-native-reanimated": "^3.11.0",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
+    
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
