--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-dev-client": "~4.0.14",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "^3.10.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.1",
