--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-dev-client": "~4.0.14",
     "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
+    "expo-video": "^1.1.10",
     "firebase": "^10.12.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "react-native": "^0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-loader-kit": "^2.0.8",
     "react-native-reanimated": "^3.10.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.1",
