--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-dev-client": "~4.0.14",
+    "expo-image": "~1.12.12",
     "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
     "expo-video": "^1.1.10",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.10.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.1",
