--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-video": "^1.1.10",
     "firebase": "^10.12.2",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.3.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
