new eas created

--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
   "expo": {
-    "name": "AndroidChatApp",
-    "displayName": "CMS Chats",
-    "slug": "AndroidChatApp",
+    "name": "CMS Chats",
+    "slug": "cms-chats",
      "android": {
       "package": "com.cmschats"
      },
     "version": "1.0.0",
     "extra": {
       "eas": {
-        "projectId": "b92e130a-9c1c-4627-9d00-6f98223aa03e"
+        "projectId": "610eeb42-0dd4-4f25-a29c-6449a08c01f8"
       }
     },"splash": {
     "image": "./assets/splash.png",
