--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~51.0.8",
+    "expo": "^51.0.17",
     "expo-dev-client": "~4.0.14",
     "expo-image": "~1.12.12",
     "expo-image-picker": "^15.0.5",
@@ -25,7 +25,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "^0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-loader-kit": "^2.0.8",
