--- a/ios/CMSChats.xcodeproj/xcshareddata/xcschemes/CMSChats.xcscheme
+++ b/ios/CMSChats.xcodeproj/xcshareddata/xcschemes/CMSChats.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AndroidChatApp.app"
-               BlueprintName = "AndroidChatApp"
-               ReferencedContainer = "container:AndroidChatApp.xcodeproj">
+               BuildableName = "CMSChats.app"
+               BlueprintName = "CMSChats"
+               ReferencedContainer = "container:CMSChats.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AndroidChatAppTests.xctest"
-               BlueprintName = "AndroidChatAppTests"
-               ReferencedContainer = "container:AndroidChatApp.xcodeproj">
+               BuildableName = "CMSChatsTests.xctest"
+               BlueprintName = "CMSChatsTests"
+               ReferencedContainer = "container:CMSChats.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AndroidChatApp.app"
-            BlueprintName = "AndroidChatApp"
-            ReferencedContainer = "container:AndroidChatApp.xcodeproj">
+            BuildableName = "CMSChats.app"
+            BlueprintName = "CMSChats"
+            ReferencedContainer = "container:CMSChats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AndroidChatApp.app"
-            BlueprintName = "AndroidChatApp"
-            ReferencedContainer = "container:AndroidChatApp.xcodeproj">
+            BuildableName = "CMSChats.app"
+            BlueprintName = "CMSChats"
+            ReferencedContainer = "container:CMSChats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
