--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-image": "~1.12.12",
     "expo-image-picker": "^15.0.5",
     "expo-router": "^3.5.16",
+    "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-video": "^1.1.10",
     "firebase": "^10.12.2",
