World Chat UI added

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "^51.0.17",
     "expo-dev-client": "~4.0.14",
+    "expo-device": "^6.0.2",
     "expo-image": "~1.12.12",
     "expo-image-picker": "^15.0.5",
+    "expo-notifications": "~0.28.9",
     "expo-router": "^3.5.16",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
