--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-router": "^3.5.16",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.19",
     "expo-video": "^1.1.10",
     "firebase": "^10.12.2",
     "lottie-react-native": "6.7.0",
