--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "^51.0.17",
-    "expo-dev-client": "~4.0.14",
+    "expo": "~51.0.20",
+    "expo-dev-client": "~4.0.20",
     "expo-device": "^6.0.2",
     "expo-image": "~1.12.12",
-    "expo-image-picker": "^15.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-notifications": "~0.28.9",
-    "expo-router": "^3.5.16",
+    "expo-router": "~3.5.18",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.19",
@@ -32,7 +32,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.2",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-loader-kit": "^2.0.8",
